force-app/main/default/objects/Vehicle__c/fields/is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_Deleted</label>
    <type>Checkbox</type>
</CustomField>