force-app/main/default/objects/Vehicle__c/fields/is_Rejected__c.field-meta.xml
<CustomField>
    <fullName>is_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Rejected</label>
    <type>Checkbox</type>
</CustomField>